# ds4codex

./: .gitignore  CHANGELOG.md  README.md  ds4codex.md  pyproject.toml
.github/workflows/: auto-release.yml  pypi-publish.yml
docs/: ds4codex_v2.md
ds4codex/: __init__.py  cli.py  config.py  proxy.py
tests/: test_config.py  test_proxy.py
